--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
+    "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
