--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "@types/testing-library__dom": "^7.5.0",
@@ -66,6 +67,7 @@
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4",
     "jest-environment-jsdom-sixteen": "^1.0.3",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "react-test-renderer": "^16.13.1"
   }
 }
